# www.os-sketch.com

./: .gitignore  .gitmessage  .markdownlint.yaml  .mdlrc  CONTRIBUTING.md  README.md  mkdocs.yml  netlify.toml  pdf_event_hook.py  pyproject.toml
.cache/plugin/git-committers/: authors.json
.github/ISSUE_TEMPLATE/: config.yml  offer-web-site-feedback.yml  report-source-code-bug.yml  report-web-site-bug.yaml
.github/workflows/: main.yml
decks/os-slides/: package.json
decks/os-slides/address-spaces/: slides.md
decks/os-slides/concurrency-introduction/: package.json  slides.md
decks/os-slides/cpu-scheduling/: package.json  slides.md
decks/os-slides/data-integrity/: package.json  slides.md
decks/os-slides/distributed-systems/: package.json  slides.md
decks/os-slides/file-directories/: slides.md
decks/os-slides/files-directories/: package.json  slides.md
decks/os-slides/io-introduction/: package.json  slides.md
decks/os-slides/locks-introduction/: package.json  slides.md
decks/os-slides/memory-swapping/: package.json  slides.md
decks/os-slides/nfs-introduction/: package.json  slides.md
docs/: index.md  tags.md
docs/img/: Process.excalidraw  terminal-window.excalidraw
docs/operating-systems/: course-tools.md  installation  installation.md  introduction.md  learning-community.md  learning-objectives.md  schedule.md  sketches.md  syllabus.md
docs/stylesheets/: extra.css
includes/: abbreviations.md
overrides/: main.html
overrides/partials/: content.html  copyright.html  footer.html  source-file.html  tags.html
scripts/: netlify-docs.sh
(+19 files in other folders)
